Second plugin slot should be named JSONPlaceholder

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
           <thead class="thead-dark">
             <tr>
               <th scope="col">Plugin Slot counter</th>
-              <th scope="col">Plugin Slot counter</th>
+              <th scope="col">Plugin Slot JSONPlaceholder</th>
             </tr>
           </thead>
           <tbody>
